# nystrom-distributed

./: .gitignore  CIFAR10bianry.py  CMakeLists.txt  communicator.py  matrix.py  mympi.py  nystrom.py  parallelReadWrite.py  utils.py
c_matmul/: CMakeLists.txt  cublas-test.cpp  main.cpp  matmul.cpp  matrix.h  nystrom.cpp  nystrom.h  pack_unpack.cu  prng.h  prng_test.cpp  procgrid.h  readFileTest  readFileTest.cpp  test-cublas.cpp  test-cuda-aware-mpi.cpp  test-prng.cpp  utils.h
scripts/: cua-mpi-test.sh  generateBinary.slurm  matmul-correctness-check.sh  matmul-results.csv  matmul-test.sh  mympi.sh  nystrom-results.csv  nystrom-test.sh  nystrom.sh  nystrom_deac.slurm  parallelReadWriteTest.slurm  parse-matmul-experiment.py  parse-nystrom-experiment.py  plots.ipynb  reduce-scatter-benchmark.csv
tests/: matmul-correctness-test.py  matmul-test.py  randmat-test.py
